This file documents the revision history for Perl extension HTTP::Body.

1.00
        - Added support for chunked requests if no $length value is passed to new().
        - Fixed urlencoded parser to handle spaces after semicolons and equal signs
          in the value. (Tom Heady, http://rt.cpan.org/Ticket/Display.html?id=31055)
        - Fixed multipart test to properly clean up temporary files.

0.9   2007-03-27 14:00:00
        - Fixed bug where empty fields in multipart/form-data were ignored.
          (Ton Voon)
        - Fixed bug where an uploaded file with the name "0" was ignored.
          (Ton Voon)
        - Small performance improvements to urlencoded parser.

0.8   2007-03-23 18:40:00
        - Some browsers such as MSIE send extra data after the body content.
          We now properly ignore anything beyond Content-Length.

0.7   2007-03-23 10:00:00
        - Fixed parsing an empty (zero-length) file using multipart.
          http://rt.cpan.org/NoAuth/Bug.html?id=25392

0.6   2006-01-06 00:00:00
        - Fixed buffer bug in OctetStream, reported by Daisuke Murase
          <typester@cpan.org>.
        - Fixed YAML prereq, reported by Jess Robinson
        - Added tests, Ben Trott <ben@sixapart.com>.

0.5   2005-11-17 00:00:00
        - Updated for PAR compatibility

0.4   2005-11-09 01:00:00
        - Version bump to 0.4 so CPAN.pm installs the right version.

0.03  2005-10-27 20:00:00
        - removed use of List::Util first due to memory leakage.
          http://rt.cpan.org/NoAuth/Bug.html?id=13891

0.2   2005-10-07
        - fixed POD

0.01  2005-09-07
        - first release